crates/ddlog-syntax/tests/inline/fail/unclosed_block.rast
ROOT@0..21
  COMMENT@0..12 "// kind:expr"
  WHITESPACE@12..13 "\n"
  EXPR@13..21
    BLOCK@13..21
      L_CURLY@13..14 "{"
      EXPR@14..21
        BLOCK@14..20
          L_CURLY@14..15 "{"
          WHITESPACE@15..16 " "
          EXPR@16..19
            LITERAL@16..18
              NUMBER@16..18 "10"
            WHITESPACE@18..19 " "
          R_CURLY@19..20 "}"
        WHITESPACE@20..21 "\n"
--
Error: expected '}' but instead the file ends
   ,-[inline/fail/unclosed_block.dl:2:9]
   |
 2 | {{ 10 }
   :         | 
   :         `- the file ends here
---'
--
// kind:expr
{{ 10 }

